done: logout route
