# route/user.js
@@ -1,9 +1,10 @@
 const express = require('express');
 const router = express.Router();
 
-const {signup, login} = require('../controller/userController');
+const {signup, login, logout} = require('../controller/userController');
 
 router.route('/signup').post(signup);
 router.route('/login').post(login);
+router.route('/logout').get(logout);
 
 module.exports = router;
